--- a/app.json
+++ b/app.json
@@ -4,11 +4,7 @@
     "slug": "iLinkOn",
     "privacy": "public",
     "sdkVersion": "36.0.0",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
+    "platforms": ["ios", "android", "web"],
     "version": "2.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -20,9 +16,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
       "buildNumber": "2.0.0",
@@ -41,7 +35,7 @@
     },
     "android": {
       "package": "com.ilinkon.www",
-      "versionCode": 2,
+      "versionCode": 3,
       "permissions": [
         "com.htc.launcher.permission.UPDATE_SHORTCUT",
         "READ_EXTERNAL_STORAGE",
