remove required from profilePhoto, added profileImage modal, fixed double splash screen, added activeEvent flag, redesigned OTP screen

--- a/app.json
+++ b/app.json
@@ -34,7 +34,7 @@
       }
     },
     "android": {
-      "package": "com.ilinkon.www",
+      "package": "com.ilinkon.app",
       "versionCode": 3,
       "permissions": [
         "com.htc.launcher.permission.UPDATE_SHORTCUT",
