--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "expo-constants": "~8.0.0",
     "expo-image-picker": "~8.0.1",
     "expo-permissions": "~8.0.0",
+    "expo-splash-screen": "^0.5.0",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-app-intro-slider": "^3.0.0",
+    "react-native-audio": "^4.3.0",
     "react-native-autogrow-input": "^0.2.1",
     "react-native-communications": "^2.2.1",
     "react-native-datepicker": "^1.7.2",
@@ -29,6 +31,7 @@
     "react-native-easy-toast": "^1.2.0",
     "react-native-gesture-handler": "^1.5.6",
     "react-native-hooks": "^0.9.0",
+    "react-native-image-view": "^2.1.9",
     "react-native-ionicons": "^4.6.4",
     "react-native-keyboard-space": "^1.0.1",
     "react-native-keyboard-spacer": "^0.4.1",
@@ -41,8 +44,11 @@
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-simple-dialogs": "^1.2.1",
+    "react-native-sound": "^0.11.0",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "9.13.3",
     "react-native-svg-animated-linear-gradient": "^0.3.4",
+    "react-native-vector-icons": "^7.0.0",
     "react-native-web": "~0.11.7",
     "react-native-webview": "^10.3.1",
     "react-navigation": "^4.1.1",
