Install expo av, document picker and file system

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "add": "^2.0.6",
     "expo": "~36.0.0",
     "expo-constants": "~8.0.0",
-    "expo-image-picker": "~8.0.1",
+    "expo-image-picker": "^8.0.2",
     "expo-permissions": "~8.0.0",
     "expo-splash-screen": "^0.5.0",
     "jwt-decode": "^2.2.0",
@@ -30,6 +30,7 @@
     "react-native-dropdownalert": "^4.2.1",
     "react-native-easy-toast": "^1.2.0",
     "react-native-gesture-handler": "^1.5.6",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-hooks": "^0.9.0",
     "react-native-image-view": "^2.1.9",
     "react-native-ionicons": "^4.6.4",
@@ -37,6 +38,7 @@
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-modal-datetime-picker": "^8.5.1",
+    "react-native-navbar": "^2.1.0",
     "react-native-otp-inputs": "^5.0.0-alpha.0",
     "react-native-picker-select": "^7.0.0",
     "react-native-radio-buttons-group": "^1.0.7",
@@ -59,7 +61,10 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.3.0",
-    "yarn": "^1.22.0"
+    "yarn": "^1.22.0",
+    "expo-document-picker": "~8.0.0",
+    "expo-av": "~8.0.0",
+    "expo-file-system": "~8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
