--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "@react-navigation/native": "^5.1.0",
     "add": "^2.0.6",
     "expo": "~36.0.0",
+    "expo-asset": "^8.2.0",
+    "expo-av": "~8.0.0",
     "expo-constants": "~8.0.0",
+    "expo-document-picker": "~8.0.0",
+    "expo-file-system": "~8.0.0",
+    "expo-font": "^8.3.0",
     "expo-image-picker": "^8.0.2",
     "expo-permissions": "~8.0.0",
     "expo-splash-screen": "^0.5.0",
@@ -25,6 +30,8 @@
     "react-native-app-intro-slider": "^3.0.0",
     "react-native-audio": "^4.3.0",
     "react-native-autogrow-input": "^0.2.1",
+    "react-native-axios": "^0.17.1",
+    "react-native-base64": "^0.1.0",
     "react-native-communications": "^2.2.1",
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdownalert": "^4.2.1",
@@ -61,10 +68,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.3.0",
-    "yarn": "^1.22.0",
-    "expo-document-picker": "~8.0.0",
-    "expo-av": "~8.0.0",
-    "expo-file-system": "~8.0.0"
+    "yarn": "^1.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
