--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/native": "^5.1.0",
     "add": "^2.0.6",
-    "expo": "~36.0.0",
-    "expo-asset": "^8.2.0",
+    "expo": "~36.0.1",
+    "expo-asset": "^8.0.0",
     "expo-av": "~8.0.0",
     "expo-constants": "~8.0.0",
     "expo-document-picker": "~8.0.0",
     "expo-file-system": "~8.0.0",
-    "expo-font": "^8.3.0",
     "expo-image-picker": "^8.0.2",
     "expo-permissions": "~8.0.0",
     "expo-splash-screen": "^0.5.0",
@@ -67,6 +66,7 @@
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "rn-fetch-blob": "^0.12.0",
     "socket.io-client": "^2.3.0",
     "yarn": "^1.22.0"
   },
