--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "rn-fetch-blob": "^0.12.0",
+    "rn-pdf-reader-js": "^4.1.1",
     "socket.io-client": "^2.3.0",
     "yarn": "^1.22.0"
   },
