--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-document-picker": "~8.0.0",
     "expo-file-system": "~8.0.0",
     "expo-image-picker": "^8.0.2",
+    "expo-media-library": "^9.2.1",
     "expo-permissions": "~8.0.0",
     "expo-splash-screen": "^0.5.0",
     "jwt-decode": "^2.2.0",
@@ -57,6 +58,7 @@
     "react-native-splash-screen": "^3.2.0",
     "react-native-svg": "9.13.3",
     "react-native-svg-animated-linear-gradient": "^0.3.4",
+    "react-native-track-player": "^1.2.3",
     "react-native-vector-icons": "^7.0.0",
     "react-native-web": "~0.11.7",
     "react-native-webview": "^10.3.1",
