--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-image-picker": "^8.0.2",
     "expo-media-library": "^9.2.1",
     "expo-permissions": "~8.0.0",
+    "expo-sharing": "^8.4.1",
     "expo-splash-screen": "^0.5.0",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
@@ -51,6 +52,7 @@
     "react-native-picker-select": "^7.0.0",
     "react-native-radio-buttons-group": "^1.0.7",
     "react-native-reanimated": "~1.4.0",
+    "react-native-responsive-image": "^2.3.1",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-simple-dialogs": "^1.2.1",
