--- a/package.json
+++ b/package.json
@@ -8,26 +8,27 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "2.1.0",
-    "@react-native-community/masked-view": "0.1.5",
+    "@react-native-community/datetimepicker": "^3.0.4",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.1.0",
     "add": "^2.0.6",
-    "expo": "~36.0.1",
-    "expo-asset": "^8.0.0",
-    "expo-av": "~8.0.0",
-    "expo-constants": "~8.0.0",
-    "expo-document-picker": "~8.0.0",
-    "expo-file-system": "~8.0.0",
-    "expo-image-picker": "^8.0.2",
-    "expo-media-library": "^9.2.1",
-    "expo-permissions": "~8.0.0",
-    "expo-sharing": "^8.4.1",
-    "expo-splash-screen": "^0.5.0",
+    "expo": "^39.0.0",
+    "expo-asset": "~8.2.0",
+    "expo-av": "~8.6.0",
+    "expo-constants": "~9.2.0",
+    "expo-document-picker": "~8.4.0",
+    "expo-file-system": "~9.2.0",
+    "expo-image-picker": "~9.1.1",
+    "expo-media-library": "~9.2.1",
+    "expo-notifications": "~0.7.2",
+    "expo-permissions": "~9.3.0",
+    "expo-sharing": "~8.4.1",
+    "expo-splash-screen": "~0.6.2",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-app-intro-slider": "^3.0.0",
     "react-native-audio": "^4.3.0",
     "react-native-audio-transcoder": "^0.3.0",
@@ -38,7 +39,7 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdownalert": "^4.2.1",
     "react-native-easy-toast": "^1.2.0",
-    "react-native-gesture-handler": "^1.5.6",
+    "react-native-gesture-handler": "~1.7.0",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-hooks": "^0.9.0",
     "react-native-image-view": "^2.1.9",
@@ -46,24 +47,25 @@
     "react-native-keyboard-space": "^1.0.1",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-material-dropdown": "^0.11.1",
+    "react-native-material-dropdown-update": "^0.12.0",
     "react-native-modal-datetime-picker": "^8.5.1",
     "react-native-navbar": "^2.1.0",
     "react-native-otp-inputs": "^5.0.0-alpha.0",
     "react-native-picker-select": "^7.0.0",
     "react-native-radio-buttons-group": "^1.0.7",
-    "react-native-reanimated": "~1.4.0",
+    "react-native-reanimated": "~1.13.0",
     "react-native-responsive-image": "^2.3.1",
-    "react-native-safe-area-context": "0.6.0",
-    "react-native-screens": "2.0.0-alpha.12",
+    "react-native-safe-area-context": "3.1.4",
+    "react-native-screens": "~2.10.1",
     "react-native-simple-dialogs": "^1.2.1",
     "react-native-sound": "^0.11.0",
     "react-native-splash-screen": "^3.2.0",
-    "react-native-svg": "9.13.3",
+    "react-native-svg": "12.1.0",
     "react-native-svg-animated-linear-gradient": "^0.3.4",
     "react-native-track-player": "^1.2.3",
     "react-native-vector-icons": "^7.0.0",
-    "react-native-web": "~0.11.7",
-    "react-native-webview": "^10.3.1",
+    "react-native-web": "~0.13.7",
+    "react-native-webview": "10.7.0",
     "react-navigation": "^4.1.1",
     "react-navigation-drawer": "^2.3.4",
     "react-navigation-hooks": "^1.1.0",
@@ -78,7 +80,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "babel-preset-expo": "~8.0.0"
+    "babel-preset-expo": "^8.3.0"
   },
   "private": true
 }
