--- a/app.json
+++ b/app.json
@@ -3,11 +3,8 @@
     "name": "iLinkOn",
     "slug": "iLinkOn",
     "privacy": "public",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
+    "sdkVersion": "39.0.0",
+    "platforms": ["ios", "android", "web"],
     "version": "2.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -19,9 +16,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
       "usesIcloudStorage": true,
@@ -41,7 +36,7 @@
     },
     "android": {
       "package": "com.ilinkon.app",
-      "versionCode": 3,
+      "versionCode": 6,
       "permissions": [
         "com.htc.launcher.permission.UPDATE_SHORTCUT",
         "READ_EXTERNAL_STORAGE",
