--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "expo-file-system": "~9.2.0",
     "expo-image-picker": "~9.1.1",
     "expo-media-library": "~9.2.1",
-    "expo-notifications": "~0.7.2",
+    "expo-notifications": "^0.7.2",
     "expo-permissions": "~9.3.0",
     "expo-sharing": "~8.4.1",
     "expo-splash-screen": "~0.6.2",
@@ -75,6 +75,7 @@
     "redux-thunk": "^2.3.0",
     "rn-fetch-blob": "^0.12.0",
     "rn-pdf-reader-js": "^4.1.1",
+    "sentry-expo": "^3.0.3",
     "socket.io-client": "^2.3.0",
     "yarn": "^1.22.0"
   },
