--- a/package.json
+++ b/package.json
@@ -1,18 +1,27 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "web": "expo start --web"
   },
   "dependencies": {
+    "expo": "^39.0.0",
+    "expo-splash-screen": "~0.6.2",
+    "expo-status-bar": "~1.0.2",
+    "expo-updates": "~0.3.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "~0.63.3",
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-screens": "~2.10.1",
+    "react-native-unimodules": "~0.11.0",
+    "react-native-web": "~0.13.7",
     "@react-native-community/datetimepicker": "^3.0.4",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.1.0",
     "add": "^2.0.6",
-    "expo": "^39.0.0",
     "expo-asset": "~8.2.0",
     "expo-av": "~8.6.0",
     "expo-constants": "~9.2.0",
@@ -23,12 +32,8 @@
     "expo-notifications": "^0.7.2",
     "expo-permissions": "~9.3.0",
     "expo-sharing": "~8.4.1",
-    "expo-splash-screen": "~0.6.2",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
     "react-native-app-intro-slider": "^3.0.0",
     "react-native-audio": "^4.3.0",
     "react-native-audio-transcoder": "^0.3.0",
@@ -39,7 +44,6 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-dropdownalert": "^4.2.1",
     "react-native-easy-toast": "^1.2.0",
-    "react-native-gesture-handler": "~1.7.0",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-hooks": "^0.9.0",
     "react-native-image-view": "^2.1.9",
@@ -53,10 +57,8 @@
     "react-native-otp-inputs": "^5.0.0-alpha.0",
     "react-native-picker-select": "^7.0.0",
     "react-native-radio-buttons-group": "^1.0.7",
-    "react-native-reanimated": "~1.13.0",
     "react-native-responsive-image": "^2.3.1",
     "react-native-safe-area-context": "3.1.4",
-    "react-native-screens": "~2.10.1",
     "react-native-simple-dialogs": "^1.2.1",
     "react-native-sound": "^0.11.0",
     "react-native-splash-screen": "^3.2.0",
@@ -64,7 +66,6 @@
     "react-native-svg-animated-linear-gradient": "^0.3.4",
     "react-native-track-player": "^1.2.3",
     "react-native-vector-icons": "^7.0.0",
-    "react-native-web": "~0.13.7",
     "react-native-webview": "10.7.0",
     "react-navigation": "^4.1.1",
     "react-navigation-drawer": "^2.3.4",
@@ -81,7 +82,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "babel-jest": "~25.2.6",
+    "jest": "~25.2.6",
+    "react-test-renderer": "~16.13.1",
     "babel-preset-expo": "^8.3.0"
   },
-  "private": true
+  "private": true,
+  "name": "iLinkOn-Native",
+  "version": "1.0.0"
 }
