--- a/ios/iLinkOn/Info.plist
+++ b/ios/iLinkOn/Info.plist
@@ -17,46 +17,46 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.0.0</string>
+	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>2.0.0</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>GMSApiKey</key>
 	<string>AIzaSyDf_cRMFZYYjQrkf5rqlkgSIr5yQHa_rBA</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-		<key>NSAllowsArbitraryLoadsInWebContent</key>
-    <true/>
-    <key>NSAllowsLocalNetworking</key>
-    <true/>
 		<key>NSAllowsArbitraryLoads</key>
+		<false/>
+		<key>NSAllowsArbitraryLoadsInWebContent</key>
+		<true/>
+		<key>NSAllowsLocalNetworking</key>
 		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
-			<key>localhost</key>
+			<key></key>
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
 			</dict>
 		</dict>
 	</dict>
-	<key>NSMicrophoneUsageDescription</key>
-	<string>iLinkOn would like to access your microphone in order to record audio message</string>
 	<key>NSCameraUsageDescription</key>
 	<string>iLinkOn would like to access your library in order to update your profile or send image/pdf file</string>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>iLinkOn would like to access your library in order to update your profile or send image/pdf file</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>iLinkOn would like to access your photos in order to update your profile or send image file</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>App would like to access your current location</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>App would like to access your current location</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>iLinkOn would like to access your current location</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>iLinkOn would like to access your microphone in order to record audio message</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>iLinkOn would like to access your library in order to update your profile or send image/pdf file</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>iLinkOn would like to access your photos in order to update your profile or send image file</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
